# Fuzzy_C_Means_Clustering

./: .gitignore  CMakeLists.txt  README.md  TextGraphicsSeperation.cpp
PatternRecogAlgos/Clustering/: K_Means_Clustering.cpp  K_Means_Clustering.h
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_EN_FCM/: Fuzzy_C_Means_ENFCM.cpp
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_EN_FCM/hdr/: Fuzzy_C_Means_ENFCM.h
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_FGfsm/: Fuzzy_C_Means_FGfsm.cpp  Fuzzy_C_Means_FGfsm_S1.cpp  Fuzzy_C_Means_FGfsm_S2.cpp
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_FGfsm/hdr/: Fuzzy_C_Means_FGfsm.h  Fuzzy_C_Means_FGfsm_S1.h  Fuzzy_C_Means_FGfsm_S2.h
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_FLIcm/: Fuzzy_C_Means_FLIcm.cpp
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_FLIcm/hdr/: Fuzzy_C_Means_FLIcm.h
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_M1/: Fuzzy_C_Means_M1.cpp
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_M1/hdr/: Fuzzy_C_Means_M1.h
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_S1_S2/: Fuzzy_C_Means_S1.cpp  Fuzzy_C_Means_S2.cpp
PatternRecogAlgos/Fuzzy_C_Means/Fuzzy_C_Means_S1_S2/hdr/: Fuzzy_C_Means_S1.h  Fuzzy_C_Means_S2.h
util/: BasicAlgo.cpp  TiffImageReader.cpp  TiffImageReader.hpp
util/hdr/: BasicAlgo.h  spline.h
